# data-engineering-portfolio

./: .activity-ping.md  .gitignore  LEARNING_PLAN.md  PORTFOLIO_ENHANCEMENTS.md  README.md  index.html  resume.html
assets/css/: app.css  case-study.css
enterprise-data-platform/: CONTRIBUTING.md  Makefile  README.md  index.html  pyproject.toml
enterprise-data-platform/architecture/: data-flow.md  medallion-architecture.md
enterprise-data-platform/data-quality/anomaly-detection/: anomaly_detector.py
enterprise-data-platform/data-quality/validation-rules/: validation_engine.py
enterprise-data-platform/docs/: deployment-guide.md  performance-benchmarks.md  reliability-metrics.md
enterprise-data-platform/docs/architecture-decisions/: 001-polars-over-pandas.md  002-duckdb-for-analytics.md  003-medallion-architecture.md  README.md
enterprise-data-platform/etl-framework/extractors/: __init__.py  api_extractor.py  base_extractor.py  database_extractor.py  rpa_extractor.py
enterprise-data-platform/etl-framework/loaders/: __init__.py  duckdb_loader.py  parquet_writer.py
enterprise-data-platform/etl-framework/transformers/: __init__.py  base_transformer.py  data_cleaner.py  schema_enforcer.py
foundation/: README.md
foundation/database-fundamentals/: README.md
foundation/database-fundamentals/week-01/: README.md
foundation/database-fundamentals/week-02/: README.md
foundation/database-fundamentals/week-03/: README.md
foundation/database-fundamentals/week-04/: README.md
foundation/database-fundamentals/week-05/: README.md
foundation/database-fundamentals/week-06/: README.md
foundation/database-fundamentals/week-07/: README.md
foundation/database-fundamentals/week-08/: README.md
foundation/mathematics/: README.md
foundation/mathematics/week-01/: README.md
foundation/mathematics/week-02/: README.md
foundation/mathematics/week-03/: README.md
foundation/mathematics/week-04/: README.md
foundation/mathematics/week-05/: README.md
foundation/mathematics/week-06/: README.md
foundation/mathematics/week-07/: README.md
foundation/mathematics/week-08/: README.md
foundation/mathematics/week-09/: README.md
foundation/mathematics/week-10/: README.md
foundation/mathematics/week-11/: README.md
foundation/mathematics/week-12/: README.md
foundation/programming-fundamentals/: README.md
foundation/programming-fundamentals/week-01/: README.md
foundation/programming-fundamentals/week-02/: README.md
foundation/programming-fundamentals/week-03/: README.md
foundation/programming-fundamentals/week-04/: README.md
foundation/programming-fundamentals/week-05/: README.md
foundation/programming-fundamentals/week-06/: README.md
foundation/programming-fundamentals/week-07/: README.md
foundation/programming-fundamentals/week-08/: README.md
foundation/statistics/: README.md
foundation/statistics/week-01/: README.md
foundation/statistics/week-02/: README.md
foundation/statistics/week-03/: README.md
foundation/statistics/week-04/: README.md
foundation/statistics/week-05/: README.md
foundation/statistics/week-06/: README.md
foundation/statistics/week-07/: README.md
foundation/statistics/week-08/: README.md
foundation/statistics/week-09/: README.md
foundation/statistics/week-10/: README.md
project-001-modern-data-platform/: README.md  requirements.txt
project-001-modern-data-platform/airflow/dags/: bronze_ingestion_dag.py  silver_gold_dag.py
project-001-modern-data-platform/src/ingestion/: m5_ingestion.py
project-001-modern-data-platform/src/transformation/: bronze_to_silver.py  silver_to_gold.py
projects/: anomaly-detection.html  demand-forecasting.html  medallion-lakehouse.html  rpa-bot-framework.html
