[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enterprise-data-platform"
version = "1.0.0"
description = "Production-grade Medallion data lakehouse for supply chain analytics"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Godson Kurishinkal", email = "godson.kurishinkal@gmail.com" }
]
keywords = [
    "data-engineering",
    "etl",
    "medallion-architecture",
    "data-lakehouse",
    "polars",
    "duckdb",
    "supply-chain",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.10"

dependencies = [
    "polars>=0.20.0",
    "duckdb>=0.10.0",
    "pyarrow>=14.0.0",
    "pyyaml>=6.0",
    "pyodbc>=5.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    "black>=23.0.0",
]

# RPA dependencies (for legacy system extraction)
rpa = [
    "selenium>=4.15.0",
    "pyautogui>=0.9.54",
    "webdriver-manager>=4.0.0",
]

# Dashboard dependencies
viz = [
    "streamlit>=1.29.0",
    "plotly>=5.18.0",
    "altair>=5.2.0",
]

# ML/Forecasting dependencies
ml = [
    "scikit-learn>=1.3.0",
    "prophet>=1.1.5",
    "statsmodels>=0.14.0",
]

# All optional dependencies
all = [
    "enterprise-data-platform[dev,rpa,viz,ml]",
]

[project.urls]
Homepage = "https://godsonkurishinkal.github.io/data-engineering-portfolio/"
Documentation = "https://github.com/GodsonKurishinkal/data-engineering-portfolio/tree/main/enterprise-data-platform/docs"
Repository = "https://github.com/GodsonKurishinkal/data-engineering-portfolio"
Issues = "https://github.com/GodsonKurishinkal/data-engineering-portfolio/issues"

[project.scripts]
etl = "etl_framework.cli:main"

# ============================================================================
# Tool Configuration
# ============================================================================

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in argument defaults
    "B904",   # raise without from (acceptable in some cases)
]

[tool.ruff.isort]
known-first-party = ["etl_framework"]

[tool.ruff.per-file-ignores]
"tests/**/*" = ["ARG", "S101"]  # Allow unused args and assert in tests

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "pyodbc.*",
    "selenium.*",
    "pyautogui.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=etl_framework",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
]
testpaths = ["tests"]
pythonpath = [".", "etl-framework"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]

[tool.coverage.run]
source = ["etl_framework"]
branch = true
omit = [
    "tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.ruff_cache
    | \.venv
    | dist
    | build
)/
'''
